--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ Process process
 if (DefaultNativePlatform.getCurrentOperatingSystem().isWindows()) {
     process = "docker run --rm -v /var/run/docker.sock:/var/run/docker.sock alpine stat -c %g /var/run/docker.sock".execute()
 } else if (DefaultNativePlatform.getCurrentOperatingSystem().isLinux()) {
-    process = "stat -c %g /var/run/docker.sock".execute()
+    process = "sudo stat -c %g /var/run/docker.sock".execute()
 } else {
     throw new GradleException("Unsupported operating system. No way to find group of /var/run/docker.sock.")
 }
